@@ -1,3 +1,8 @@
+2017-03-04  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-mode-update-copyright): Modify the buffer
+	only if necessary. Warn about equal first and last year.
+
 2017-02-28  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.33 released.
